--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -4,3 +4,20 @@
     padding: 1em;
 }
 
+body, html {
+  height: 100%;
+}
+
+.bg {
+  
+  /* The image used */
+  background-image: url("../imgs/back.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
