--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -1,6 +1,23 @@
 .centro{
     display: block;
-    margin: 0 auto;
     padding: 1em;
+    margin-top: 3%;
 }
 
+body, html {
+  height: 100%;
+}
+
+.bg {
+  
+  /* The image used */
+  background-image: url("../imgs/back.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
