--- a/src/main/webapp/templates/listagemDisciplinas.xhtml
+++ b/src/main/webapp/templates/listagemDisciplinas.xhtml
@@ -64,7 +64,7 @@
                 </tbody>
             </table>
             <h:panelGrid columns="2">
-                <button type="button" class="btn btn-outline-dark">Cadastrar</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='FormCursos.xhtml';">Cadastrar</button>
                 <button type="button" class="btn btn-outline-dark">Pesquisar</button>
             </h:panelGrid>
         </div>
