teste dao consultar

--- a/src/main/webapp/templates/FormCursos.xhtml
+++ b/src/main/webapp/templates/FormCursos.xhtml
@@ -13,14 +13,14 @@
 		<br />
 		<br />
 		<label for="txtCurso">Nome do curso:</label>
-		<input type="text" id="txtCurso" name="txtCurso" value="${curso.txtCurso}" />
+		<input type="text" id="txtCurso" name="txtCurso"  />
 		<br />
 		
 		<label for="txtTurno">Turno: </label>
-		<input type="text" id="txtTurno" name="txtTurno" value="${curso.txtTurno}"/>
+		<input type="text" id="txtTurno" name="txtTurno" />
 		<br />	
 		<label for="txtDescricao">Descricao: </label>
-		<input type="text" id="txtDescricao" name="txtDescricao" value="${curso.txtDescricao}"/>
+		<input type="text" id="txtDescricao" name="txtDescricao"/>
 		<br />	
 		<br />
 		<br />
